corrected alignment

--- a/0x01-react_intro/task_4/dashboard/src/App.css
+++ b/0x01-react_intro/task_4/dashboard/src/App.css
@@ -38,3 +38,9 @@
   font-style: italic;
   text-align: center;
 }
+
+.App-body label, .App-body input, .App-body button{
+  float: left;
+  justify-content: space-between;
+
+}
